fix solid scrollbars in chrome

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--bg-secondary);
+  background: var(--bg-primary);
   border-radius: 1em;
   margin-top: 1em;
   margin-bottom: 1em;
